@@ -6,6 +6,7 @@ Revision history for Ocsinventory::Agent
        * Add new fields in setSnmpLoadBalancer() method in Common.pm
 
 2.0.x
+       * Fix Bug #881406 about security issue due to snmp_com.txt file which is no longer used
        * Fix Bug #874269 about wrong conversion if hard drive >= TB in MacOS/Storages.pm
        * Fix Bug #879487 about a misplaced object release in ocs_agent_configPane.m
     
